<resources>
    <string name="app_name">Park Here</string>
    <string name="new_user_sign_here">New User?    <u>SIGN UP</u> Here</string>
    <string name="already_registered_login_here">Already Registered? <u>Login here</u> </string>
    <string name="please_choose_a_place_for_parking">Please, Choose a Place For Parking :</string>
    <string name="place_name_one">Dhaka</string>

    <string name="dhaka">Places : 3\nParking Loot : 6 \nRent Range: High </string>
    <string name="chittagong">Chittagong \n Places : 2\n Parking Loot : 4 \n Rent Range: Medium </string>
    <string name="rajshahi">Rajshahi \n Places : 2\n Parking Loot : 4 \n Rent Range: Low </string>
    <string name="khulna">Khulna \n Places : 1\n Parking Loot : 2 \n Rent Range: Medium </string>
    <string name="_1_hour">1 Hour\n $20</string>
    <string name="_2_hour">2 Hour\n $40</string>
    <string name="_3_hour">3 Hour\n $60</string>
    <string name="easiest">Easiest Way \nFind Your Parking</string>
  <string name="credit">Credit : ৳</string>
  <string name="you_have_rent_for">You have rent for</string>

  <string-array name="places">
        <item>Kallanpur</item>
        <item>Mirpur</item>
        <item>Nikonjo</item>
    </string-array>
</resources>