<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:padding="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dhakaplace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/textviewbackgroung"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:text="@string/dhaka"
                android:textColor="@color/overlay_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chittagongplace"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textviewbackgroung"
                android:gravity="center"
                android:text="@string/chittagong"
                android:fontFamily="@font/abel"
                android:textStyle="bold"
                android:textColor="@color/overlay_dark" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/khulnaplace"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textviewbackgroung"
                android:gravity="center"
                android:text="@string/khulna"
                android:fontFamily="@font/abel"
                android:textStyle="bold"
                android:textColor="@color/overlay_dark"
                />

            <TextView
                android:id="@+id/rajshahiid"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textviewbackgroung"
                android:gravity="center"
                android:text="@string/rajshahi"
                android:fontFamily="@font/abel"
                android:textStyle="bold"
                android:textColor="@color/overlay_dark"
                />


        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>