<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DhakaPlacesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/rajshahiplacesSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Credit : ৳"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cashTextViewRajshahi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_place_24" />

        <TextView
            android:id="@+id/selectedspotinRajshahi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RUET Campus" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradiantcolorbackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Spots"
                android:textColor="@color/white"
                android:textSize="15sp"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rajshahiplaceAvailablespots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2 "
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / 2 "
                    android:textColor="@color/overlay_dark"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradiantcolorbackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Opening - Mon- Sun  "
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-thin"
                android:text="09.00-7.00"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Time"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradiantcolorbackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/rajshahi1hourRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1_hour"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradiantcolorbackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/rajsahhi2hourRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_2_hour"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradiantcolorbackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/rajshahi3hourRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_3_hour"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/cardview_light_background"
        android:padding="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_2sdp">

        <LinearLayout
            android:id="@+id/rajshahiafterrentShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="You have rent for"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/rajshahiselectedhour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 1 Hour"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your time will be finish at :"
                    android:textColor="@color/colorSecondary" />

                <TextView
                    android:id="@+id/rajshahifinishTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.00 PM"
                    android:textColor="@color/colorSecondary" />
            </LinearLayout>

            <TextView
                android:id="@+id/rajshahi1hourRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/gradiantcolorbackground"
                android:padding="@dimen/_10sdp"
                android:text="Release"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="Warning: Extra time will be added to your rent"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>